# ashura

./: .gitignore  Cargo.toml  HACKING.md  Justfile  README.md  example_aes_encryptdecrypt.rs  reference-aes-tpmtools.sh  reference-tpmtools.sh
crates/tpm2-rand/: Cargo.toml  LICENSE-APACHE  README.md
crates/tpm2-rand/src/: lib.rs
examples/: easy_stateful.rs  stateful_encryption.rs  usage.rs
frontend/: Cargo.toml
src/: crypt.rs  kv.rs  lib.rs  secret.rs  tpm.rs
